--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <description>spring-rabbitmq-demo</description>
     <properties>
         <java.version>17</java.version>
+        <jackson-databind.version>2.15.2</jackson-databind.version>
     </properties>
     <modules>
         <module>producer</module>
@@ -31,7 +32,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.15.2</version>
+            <version>${jackson-databind.version}</version>
         </dependency>
 
 
